--- a/package.json
+++ b/package.json
@@ -4,5 +4,9 @@
   "type": "module",
   "dependencies": {
     "chalk": "^5.3.0"
+  },
+  "scripts": {
+    "start": "node ./run.js",
+    "install:all": "npm install && cargo install cargo-script"
   }
 }
